# minecone

./: Cargo.toml  TODO.txt  build.rs  callgrind.out.4483  clippy.toml
res/: texture-map.xcf
res/textures/: block-texture-template.xcf  stone.xcf  test-block.xcf
src/: assets.rs  camera_controller.rs  game.rs  main.rs  model.rs  prelude.rs  render.rs  shader.wgsl  texture.rs  util.rs
src/game/: camera_controller.rs  chunk.rs  mod.rs  parallel.rs  player.rs  world.rs
src/game/block/: air.rs  dirt.rs  grass.rs  mod.rs  rocky_dirt.rs  stone.rs  test_block.rs  texmanip.rs
src/game/client/: camera_controller.rs  mod.rs
src/game/entity/: mod.rs  player.rs
src/game/worldgen/: biome.rs  biome_map.rs  mod.rs  surface_biome.rs
src/render/: camera.rs  mod.rs  model.rs  shader.wgsl  texture.rs
