[package]
name = "mineclone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.16"
pretty_env_logger = "0.4.0"
anyhow = "1.0.56"
winit = "0.26.1"
wgpu = "0.12.0"
nalgebra = "0.30.1"
nalgebra-glm = "0.16.0"
pollster = "0.2.5"
bytemuck = { version = "1.9.1", features = [ "derive" ] }
image = { version = "0.24.1", default-features = false, features = [ "png", "jpeg" ] }
