[package]
name = "mineclone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
anyhow = "1.0.56"
fs_extra = "1.2.0"
glob = "0.3.0"

[dependencies]
log = "0.4.16"
pretty_env_logger = "0.4.0"
anyhow = { version = "1.0.56", features = [ "backtrace" ] }
winit = "0.26.1"
wgpu = "0.12.0"
nalgebra = "0.30.1"
pollster = "0.2.5"
bytemuck = { version = "1.9.1", features = [ "derive" ] }
image = { version = "0.24.1", default-features = false, features = [ "png", "jpeg" ] }
tobj = "3.2.2"
array-init = "2.0.0"
parking_lot = { version = "0.12.0", features = [ "nightly", "hardware-lock-elision" ] }
rustc-hash = "1.1.0"
noise = "0.7.0"
rayon = "1.5.2"

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
debug = true
#lto = true
