[package]
name = "mineclone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.16"
pretty_env_logger = "0.4.0"
anyhow = { version = "1.0.56", features = [ "backtrace" ] }
winit = "0.26.1"
#wgpu = "0.12.0"
wgpu = { git = "https://github.com/gfx-rs/wgpu", commit = "ebca3298f01ea72f80aeac4ab1be889469f9c699", branch = "master" }
nalgebra = "0.30.1"
pollster = "0.2.5"
bytemuck = { version = "1.9.1", features = [ "derive" ] }
image = { version = "0.24.1", default-features = false, features = [ "png", "jpeg" ] }
tobj = "3.2.2"
array-init = "2.0.0"
parking_lot = { version = "0.12.0", features = [ "nightly", "hardware-lock-elision" ] }
rustc-hash = "1.1.0"
noise = "0.7.0"
crossbeam = "0.8.1"
dashmap = "5.3.1"
num_cpus = "1.13.1"
petgraph = "0.6.0"

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
debug = true
#lto = true
